# Scaff

./: .gitignore  README.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/ai-engine/: render.yaml  requirements.txt
app/ai-engine/ai-engine/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/ai-engine/ai-engine/app/: main.py
app/ai-engine/ai-engine/app/domain/ai/: enhancement_engine.py
app/ai-engine/ai-engine/app/domain/architecture/: decision_engine.py
app/ai-engine/ai-engine/app/infra/llm/: ollama_client.py
app/ai-engine/ai-engine/app/infra/vector_db/: qdrant_store.py
app/ai-engine/ai-engine/app/workers/: ai_tasks.py
app/ai-engine/ai-engine/scripts/: setup_dev.py
app/ai-engine/ai-engine/tests/integration/: test_pipeline.py
app/ai-engine/ai-engine/tests/unit/: test_decision_engine.py  test_parser.py
app/dashboard/: page.tsx
app/login/: page.tsx
app/settings/: page.tsx
app/signup/: page.tsx
components/blueprint/: BlueprintViewer.tsx
components/diagram/: DiagramCanvas.tsx
components/features/: ADRAndTeam.tsx  APISpec.tsx  ArchChat.tsx  CompareArchitectures.tsx  CostCalculator.tsx  DataFlowDiagram.tsx  DecisionVoting.tsx  ExtraFeatures.tsx  GitHubIssuesExport.tsx  MetricsPanel.tsx  RoadmapPanel.tsx  SaveSharePanel.tsx  SecurityPanel.tsx  SecurityRoadmapSave.tsx  TechStackDeepDive.tsx  WhatIfSimulator.tsx
components/layout/: Header.tsx  UserMenu.tsx
lib/api/: client.ts
lib/auth/: AuthContext.tsx  supabase-browser.ts  (+1 more)
(+12 files in other folders)
