[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",

    # DB
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # AI / LLM
    "httpx>=0.27.0",         # Ollama HTTP calls
    "tenacity>=8.3.0",       # retry logic

    # Vector DB
    "qdrant-client>=1.9.1",

    # Embeddings (local, no API key needed)
    "sentence-transformers>=3.0.1",

    # Workers
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "orjson>=3.10.3",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
